# trajan

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: package.yml  python.yml  sphinx-rtd.yml  tests.yml
docs/: .gitignore  Makefile  requirements.txt
docs/source/: api.rst  conf.py  data-layout.rst  index.rst  quickstart.rst  usage.rst
examples/: barents.nc.xz  bug05_pos.csv.xz  create_test_dataset.py  example_animation.py  example_compress.py  example_concat.py  example_concentration.py  example_contiguous_ragged.py  example_drifter_csv.py  example_drifters.py  example_find_positions_at_obs_times.py  example_indepth_omb_use.py  example_interpolate_segments.py  example_leverage_xarray.py  example_model_along_trajectory.py  example_nc_particles.py  example_omb_csv_reader.py  example_opendrift.py  example_parcels.py  example_plot_spectra.py  example_plot_spectra_accessors.py  example_trajan.py  example_trajectorymodel.py  openoil.nc  openoil.nc.xz  test.nc
examples/data_dir/: barents.nc  gnome_nc_particles.nc  opv2025_subset.nc  test.nc
tests/: conftest.py  fixtures.py  test_animate_drifters.py  test_convert_datalayout.py  test_convert_ragged.py  test_crs.py  test_dims.py  test_docstrings.py  test_fastplot.py  test_filter.py  test_geographical_selection.py  test_interpolate.py  test_parcels.py  test_plot_drifters.py  test_plot_landmask.py  test_plot_opendrift.py  test_plot_spectra.py  test_properties.py  test_read_csv.py  test_read_omb_csv.py  test_read_sfy.py  test_repr.py  test_seltime.py  test_skill_score.py  test_traj.py  test_utils.py
tests/opendrift/: test_plot_opendrift.py
tests/parcels/: __init__.py  test_flatmesh.py  test_tutorials.py
tests/test_data/: bug32.nc  (+1 more)
trajan/: __init__.py  __init__.pyi  accessor.py  ragged.py  traj.py  traj1d.py  traj2d.py  trajContiguousRagged.py  trajOrthogonal.py  trajRagged.py  trajectory_accessor.py  utils.py
(+281 files in other folders)
